[package]
name = "feed-replay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.11.0", features = ["with-serde"] }
bincode = "1.3"
chrono = "0.4.19"
clap = { version = "2.33", default-features = false }
confy = "0.4"
convert_case = "0.5.0"
directories = "2.0"
indicatif = "0.16"
lazy_static = "1.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sled = "0.34"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread", "time"] }
tokio-retry = "0.3"
